# aqml

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  rfc_proposal.md  strategy_example.md
.github/workflows/: publish-python-validator.yml  publish-vscode-extension.yml  python-validator.yml  vscode-extension.yml
docs/: quick-start.md
editors/: README.md
editors/jetbrains/: README.md  aqml.xml
editors/vim/: README.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  RELEASING.md  language-configuration.json  package-lock.json  package.json
examples/: README.md  alligator-timing.aqml  awesome-oscillator.aqml  bollinger-w-bottom.aqml  bull-bear-regime.aqml  chip-concentration.aqml  dual-thrust.aqml  ffscore-value.aqml  heikin-ashi-momentum.aqml  herding-effect-proxy.aqml  icu-ma-timing.aqml  kdj-golden-cross.aqml  low-latency-trend.aqml  low-volatility-screen.aqml  ma-channel-breakout.aqml  macd-crossover.aqml  mean-reversion.aqml  momentum-breakout.aqml  momentum-factor-ranking.aqml  multi-factor-value.aqml  northbound-flow-proxy.aqml  parabolic-sar-trend.aqml  qrs-regime-signal.aqml  rsi-overbought-oversold.aqml  rsrs-support-resistance.aqml  shooting-star-reversal.aqml  short-term-reversal.aqml  simple-rsi.aqml  smart-money-flow.aqml  time-varying-sharpe.aqml  turnover-activity.aqml  volatility-regime-timing.aqml  volume-price-resonance.aqml
spec/: aqml-v1.0.md  aqml-v2.0.md  schema.json
tests/: test_cli.py  test_examples.py  test_template_gallery.py  test_validator.py
(+23 files in other folders)
